# assimp_qt_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
assimp_qt_viewer/: CMakeLists.txt  glview.cpp  mainwindow.cpp
